Remove negative margins from footer to stop horizontal scrollbar appearing

--- a/styles/main97.css
+++ b/styles/main97.css
@@ -1223,7 +1223,6 @@ dialog-image {
 
 footer {
   background-color: var(--accent-light);
-  margin: 0 -10px 0 -10px;
   flex-shrink: 0;
 }
 
